# fmp_data

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: publish.yml
cli/: __init__.py  main.py
src/: __init__.py  fmp_api.py
src/api/: __init__.py  fmp_client.py
src/cli/: main.py
src/config/: settings.py
src/models/: data_types.py
src/storage/: mongo.py  protocols.py  schemas.py
src/utils/: __init__.py  calendar.py  date_utils.py  rate_limiter.py  tasks.py
tests/: conftest.py  test_calendar.py  test_cli.py  test_date_utils.py  test_fmp_api.py  test_integration.py
